--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
-language: java
-jdk:
-    - oraclejdk8
+language: python
+python:
+  - "2.7"
+
+# command to run tests
+# TODO: set up a master script to run all tests
+script: python src/robopatrol/test/helloWorld/HelloWorldTest.py
