--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ env:
     - ROS_DISTRO=indigo
     - ROS_CI_DESKTOP="`lsb_release -cs`"  # e.g. [precise|trusty|...]
     - PKG_NAME=robopatrol
-    - PKG_SRC_DIR=./src/robopatrol
+    - PKG_SRC_DIR=./robopatrol
     - ENV_BIN=./devel/env.sh
 
 ################################################################################
@@ -70,7 +70,7 @@ before_install:
 
 # Install all dependencies, using rosdep.
 before_script:
-  - rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
+  - rosdep install -y --from-paths robopatrol --ignore-src --rosdistro $ROS_DISTRO
 
 # Compile and test.
 script:
