--- a/robopatrol-base/Dockerfile
+++ b/robopatrol-base/Dockerfile
@@ -1,6 +1,13 @@
 FROM ros:indigo-ros-base
 
+RUN sudo apt-get update -y
+
+# Turtlebot packages
+RUN sudo apt-get install -y ros-indigo-turtlebot ros-indigo-turtlebot-apps ros-indigo-turtlebot-interactions ros-indigo-turtlebot-simulator ros-indigo-kobuki-ftdi ros-indigo-rocon-remocon ros-indigo-rocon-qt-library ros-indigo-ar-track-alvar-msgs
+
 # Used for the catkin build
-RUN /bin/bash -c 'sudo apt-get update -y && \
-sudo apt-get install build-essential -y'
+RUN sudo apt-get install -y build-essential
+
+# Make image smaller
+RUN sudo rm -rf /var/lib/apt/lists/*
 
