--- a/robopatrol-base/Dockerfile
+++ b/robopatrol-base/Dockerfile
@@ -3,7 +3,16 @@ FROM ros:indigo-ros-base
 RUN sudo apt-get update -y
 
 # Turtlebot packages
-RUN sudo apt-get install -y ros-indigo-turtlebot ros-indigo-turtlebot-apps ros-indigo-turtlebot-interactions ros-indigo-turtlebot-simulator ros-indigo-kobuki-ftdi ros-indigo-rocon-remocon ros-indigo-rocon-qt-library ros-indigo-ar-track-alvar-msgs
+RUN sudo apt-get install -y \
+ros-indigo-turtlebot \
+ros-indigo-turtlebot-apps \
+ros-indigo-turtlebot-interactions \
+ros-indigo-rosbridge-suite \
+ros-indigo-turtlebot-simulator \
+ros-indigo-kobuki-ftdi \
+ros-indigo-rocon-remocon \
+ros-indigo-rocon-qt-library \
+ros-indigo-ar-track-alvar-msgs
 
 # Used for the catkin build
 RUN sudo apt-get install -y build-essential
