--- a/package.xml
+++ b/package.xml
@@ -51,6 +51,7 @@
   <build_depend>tf</build_depend>
   <!--<build_depend>apscheduler</build_depend>-->
   <build_depend>jsonschema</build_depend>
+  <build_depend>enum34</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>rospy</run_depend>
@@ -62,6 +63,7 @@
   <run_depend>tf</run_depend>
   <!--<run_depend>apscheduler</run_depend>-->
   <run_depend>jsonschema</run_depend>
+  <run_depend>enum34</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
