--- a/package.xml
+++ b/package.xml
@@ -48,7 +48,9 @@
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>move_base_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
-  <build_depend>tf</build_depend>
+  <build_depend>tf</build_depend>  
+  <build_depend>rplidar_ros</build_depend>
+  <build_depend>hector_sensors_description</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>rospy</run_depend>
@@ -58,6 +60,8 @@
   <run_depend>move_base_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>rplidar_ros</run_depend>
+  <run_depend>hector_sensors_description</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
